--- a/index.html
+++ b/index.html
@@ -22,6 +22,21 @@
 		font-size: 20px;
 		font-family: verdana;
 	}
+  *{
+    font-family: verdana;
+  }
+
+
+input[type=text], input[type=url], input[type=email], input[type=password], input[type=tel] {
+  -webkit-appearance: none; -moz-appearance: none;
+  display: block;
+  margin: 0;
+  width: 100%; height: 40px;
+  line-height: 40px; font-size: 17px;
+  border: 1px solid #bbb;
+}
+
+
 </style>
 <body onload="skaiciuok()">
   <script type="text/javascript">
