--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ input[type=text], input[type=url], input[type=email], input[type=password], inpu
 
 
 </style>
+<center>
 <body onload="skaiciuok()">
   <script type="text/javascript">
   	function skaiciuok(){
@@ -57,5 +58,6 @@ input[type=text], input[type=url], input[type=email], input[type=password], inpu
   </form>
   <div id='pit'></div></br>
   <div id='ats'></div>
+  </center>
 </body>
 </html>
