--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@ input[type=number], input[type=url], input[type=email], input[type=password], in
   		var ilg = document.getElementById('ilgis').value;
   		var plot = document.getElementById('plotis').value;
   		document.getElementById('ats').innerHTML = "";
-  		document.getElementById('ats').innerHTML ="Plotis: " + ilg*plot + ' mm²';
+  		document.getElementById('ats').innerHTML ="Plotis: " + ilg*plot + ' mm² (' + ilg*plot/1000 + " m²)";
   		document.getElementById('pit').innerHTML = "";
-  		document.getElementById('pit').innerHTML = "Įžambinė: " + (Math.sqrt((ilg*ilg)+(plot*plot))).toFixed(2)+ " mm";
+  		document.getElementById('pit').innerHTML = "Įžambinė: " + (Math.sqrt((ilg*ilg)+(plot*plot))).toFixed(2)+ " mm ";
   	}
   </script>
 
