--- a/index.html
+++ b/index.html
@@ -13,19 +13,27 @@
 </head>
 <style type="text/css">
 	#ats{
-		color:blue;
+		color:#16a085;
 		font-size: 30px;
 		font-family: verdana;
 	}
 	#pit{
-		color:navy;
+		color:#2980b9;
 		font-size: 40px;
 		font-family: verdana;
 	}
   *{
     font-family: verdana;
   }
+#pav{
+  font-size: 55px;
+  color: #c0392b;
+  margin: 50px;
 
+}
+body{
+  background: #ecf0f1;
+}
 
 input[type=number], input[type=url], input[type=email], input[type=password], input[type=tel] {
   -webkit-appearance: none; -moz-appearance: none;
@@ -38,11 +46,12 @@ input[type=number], input[type=url], input[type=email], input[type=password], in
 
 #title{
   font-size:30px;
-  color:navy;
+  color:#34495e;
 }
 </style>
 <center>
 <body onload="skaiciuok()">
+  <div id="pav"> λ</div>
   <script type="text/javascript">
   	function skaiciuok(){
   		var ilg = document.getElementById('ilgis').value;
