--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>pitaGO</title>
+  <title>pitaGO+</title>
   <meta name="description" content="The HTML5 Herald">
   
 
@@ -60,7 +60,7 @@ input[type=number], input[type=url], input[type=email], input[type=password], in
   		document.getElementById('ats').innerHTML = "";
   		document.getElementById('ats').innerHTML ="Plotis: " + ilg*plot + ' mm² (' + ilg*plot/1000000 + " m²)";
   		document.getElementById('pit').innerHTML = "";
-  		document.getElementById('pit').innerHTML = "Įžambinė: " + (Math.sqrt((ilg*ilg)+(plot*plot))).toFixed(2)+ " mm ";
+  		document.getElementById('pit').innerHTML = "Įžambinė: " + (Math.sqrt((ilg*ilg)+(plot*plot))).toFixed(2)+ " mm "; 
   	}
   </script>
 
