--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@ input[type=number], input[type=url], input[type=email], input[type=password], in
   display: block;
   margin: 0;
   width: 100%; height: 80px;
-  line-height: 40px; font-size: 30px;
+  line-height: 40px; font-size: 50px;
   border: 1px solid #bbb;
+  padding: 15px;
 }
 
 #title{
