--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   
 
   <link rel="stylesheet" href="">
+  <link rel="javascript" href="rangeslider.min.js">
 
 </head>
 <style type="text/css">
@@ -50,6 +51,42 @@ input[type=number], input[type=url], input[type=email], input[type=password], in
   font-size:30px;
   color:#34495e;
 }
+
+
+.slidecontainer {
+  width: 100%;
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 25px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  background: #4CAF50;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #4CAF50;
+  cursor: pointer;
+}
 </style>
 <center>
 <body onload="skaiciuok()">
@@ -67,9 +104,29 @@ input[type=number], input[type=url], input[type=email], input[type=password], in
 
   <form action="#" method="post" oninput="skaiciuok()">
   	<div id="title">Ilgis:</div> <input type="number" name="name1" id="ilgis"></br>
+        <input type="range" min="1" max="2500" value="50" class="slider" id="myRange1">
+
   	 <div id="title">Plotis:</div> <input type="number" name="name2" id="plotis"></br></br>
   	 <!-- <input type="submit" name="click" value="Skaičiuoti" onclick="skaiciuok()">  -->
   </form>
+    <input type="range" min="1" max="2500" value="50" class="slider" id="myRange2">
+  <div id="demo"></div>
+  <script>
+    var slider1 = document.getElementById("myRange1");
+    var slider2 = document.getElementById("myRange2");
+    var output1 = document.getElementById("ilgis");
+    var output2 = document.getElementById("plotis");
+    output1.value = slider1.value; // Display the default slider value
+    output2.value = slider2.value;
+    // Update the current slider value (each time you drag the slider handle)
+    slider1.oninput = function() {
+  output1.value = slider1.value;
+}    
+    slider2.oninput = function() {
+  output2.value = slider2.value;
+} 
+  </script>
+
   <div id='pit'></div></br>
   <div id='ats'></div>
   </center>
