--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@ input[type=number], input[type=url], input[type=email], input[type=password], in
 
   <form action="#" method="post" oninput="skaiciuok()">
   	<div id="title">Ilgis:</div> <input type="number" name="name1" id="ilgis"></br>
-    <input type="range" min="1" max="2500" value="50" class="slider" id="myRange1">
+    <!-- <input type="range" min="1" max="2500" value="50" class="slider" id="myRange1"> -->
   	<div id="title">Plotis:</div> <input type="number" name="name2" id="plotis"></br></br>
   	 <!-- <input type="submit" name="click" value="Skaičiuoti" onclick="skaiciuok()">  -->
-     <input type="range" min="1" max="2500" value="50" class="slider" id="myRange2">
+     <!-- <input type="range" min="1" max="2500" value="50" class="slider" id="myRange2"> -->
   </form>
     
   <div id="demo"></div>
