--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@ input[type=number]:focus
   opacity: 1;
 }
 
+a{
+  text-decoration:none;
+}
+
 .slider::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
