--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ a{
   		document.getElementById('ats').innerHTML = "";
   		document.getElementById('ats').innerHTML ="<b>Plotis:</b> " + ilg*plot + ' mm² (' + ilg*plot/1000000 + " m²)";
   		document.getElementById('pit').innerHTML = "";
-  		document.getElementById('pit').innerHTML = "<b>Įžambinė:</b> " + (Math.sqrt((ilg*ilg)+(plot*plot))).toFixed(2)+ " mm "; 
+  		document.getElementById('pit').innerHTML = "<b>Skersinė:</b> " + (Math.sqrt((ilg*ilg)+(plot*plot))).toFixed(2)+ " mm "; 
   	}
   </script>
 
