--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@ input[type=number], input[type=url], input[type=email], input[type=password], in
   -webkit-appearance: none; -moz-appearance: none;
   display: block;
   margin: 0;
-  width: 70%; height: 80px;
+  width: 40%; height: 80px;
   line-height: 40px; font-size: 50px;
   border: 1px solid #bbb;
   padding: 15px;
+  border-radius: 20px;
 }
 input[type=number]:focus
 {border: 2px solid #27ae60;}
