--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		font-family: verdana;
 	}
   *{
-    font-family: verdana;
+    font-family: arial;
   }
 #pav{
 font-size: 65px;
@@ -55,6 +55,7 @@ input[type=number]:focus
 #title{
   font-size:30px;
   color:#34495e;
+  margin: 15px;
 }
 
 
