--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ a{
 </style>
 <center>
 <body onload="skaiciuok()">
-  <a href="https://meblind.github.io/index.html"><div id="pav"> λ</div></a>
+  <!-- <a href="https://meblind.github.io/index.html"><div id="pav"> λ</div></a> -->
   <script type="text/javascript">
   	function skaiciuok(){
   		var ilg = document.getElementById('ilgis').value;
@@ -142,7 +142,7 @@ a{
   	<div id="title">Plotis:</div> <input type="number" name="name2" id="plotis"></br></br>
   	 <!-- <input type="submit" name="click" value="Skaičiuoti" onclick="skaiciuok()">  -->
      <!-- <input type="range" min="1" max="2500" value="50" class="slider" id="myRange2"> -->
-    <div id='in_line'><div id="title">Dėtalių kiekis:</div> <input type="number" name="kiekis" id="kiekis">
+    <div id='in_line'><div id="title">Detalių kiekis:</div> <input type="number" name="kiekis" id="kiekis">
     <div id="title">Briaunos ilgis rulone:</div> <input type="number" name="rulonas" id="rulonas"></div></br></br>
 
   </form>
