--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
     <body onload="skaiciuok()">
       <!-- <a href="https://meblind.github.io/index.html"><div id="pav"> λ</div></a> -->
-      <a href="#"><img style="height: 50px;" src="roll.png"></img></a>
+      <a href="https://meblind.github.io/index.html"><img style="height: 50px;" src="roll.png"></img></a>
       <script type="text/javascript">
         function skaiciuok() {
           var ilg = document.getElementById('ilgis').value;
