--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     }
 
     #in_line {
-      display: ruby;
+      display: block ruby;
     }
 
     #kiekis,
@@ -86,6 +86,7 @@
       border: 2px solid #bbb;
       padding: 15px;
       border-radius: 20px;
+      font-weight: 700;
     }
 
 
@@ -144,13 +145,15 @@
   position: fixed;
   left: 5px;
   top: 5px;
-  background: white;
+  background: none;
+  border: none;
+  z-index: -1;
 }
 
   </style>
   <center>
 
-    <body onload="skaiciuok()" onresize="skaiciuok()">
+    <body  onload="skaiciuok()" onresize="skaiciuok()">
       <!-- <a href="https://meblind.github.io/index.html"><div id="pav"> λ</div></a> -->
       <a href="https://meblind.github.io/index.html"><img style="height: 50px;" src="roll.png"></img></a>
 
@@ -192,7 +195,7 @@
           document.getElementById('pit').innerHTML = "<b>Skersinė:</b> " +  (Math.sqrt((ilg * ilg) + (plot * plot))).toFixed(2) + " mm ";
           document.getElementById('bri').innerHTML = "Reikės ~" +  ((((ilg + 30) * 2 + (plot + 30) * 2) * det) / 100000).toFixed(2) + " m briaunos. (~" + ((((((ilg + 30) * 2 + (plot + 30) * 2) * det) / 100000).toFixed(2)) / rul).toFixed(2) + " rulonų)";
 
-          document.getElementById('draw').innerHTML ='<canvas id="myCanvas" width="'+ ((plot*mastelis/100+det*1.1)) +'px" height="'+ ((ilg*mastelis/100+det*1.1)) +'px" style="border:1px solid #d3d3d3;">!</canvas>';
+          document.getElementById('draw').innerHTML ='<canvas id="myCanvas" width="'+ ((plot*mastelis/100+det*1.1)) +'px" height="'+ ((ilg*mastelis/100+det*1.1)) +'px" style="border:none;">!</canvas>';
           var c = document.getElementById("myCanvas");
           var ctx = c.getContext("2d");
           
@@ -211,16 +214,16 @@
 
       </script>
 
-      <form action="#" method="post" oninput="skaiciuok()">
-        <div id="title">Ilgis:</div> <input type="number" name="name1" id="ilgis" max="2500"> 
+      <form  action="#" method="post" oninput="skaiciuok()">
+        <div  id="title">Ilgis:</div> <input  type="number" name="name1" id="ilgis" max="2500"> 
       <!--   <input onclick="skaiciuok()" type="checkbox" id="br-1" value="br1"> 1.5
         <input type="checkbox"  onclick="skaiciuok()"id="br-2" value="br2"><br> -->
         <!-- <input type="range" min="1" max="2500" value="50" class="slider" id="myRange1"> -->
-        <div id="title">Plotis:</div> <input type="number" name="name2" id="plotis" max="2500"></br></br>
+        <div  id="title">Plotis:</div> <input  type="number" name="name2" id="plotis" max="2500"></br></br>
         <!-- <input type="submit" name="click" value="Skaičiuoti" onclick="skaiciuok()">  -->
         <!-- <input type="range" min="1" max="2500" value="50" class="slider" id="myRange2"> -->
-        <div id='in_line'>
-          <div id="title">Detalių kiekis:</div> <input type="number" name="kiekis" id="kiekis">
+        <div  id='in_line'>
+          <div  id="title">Detalių kiekis:</div> <input type="number" name="kiekis" id="kiekis">
           <div id="title">Briaunos ilgis rulone:</div> <input type="number" name="rulonas" id="rulonas">
         </div></br></br>
 
@@ -244,13 +247,13 @@
 } 
   </script>
  -->
-      <div id='draw'></div>
-      <div id='pit'></div></br>
+      <div  id='draw'></div>
+      <div  id='pit'></div></br>
       
-      <div id='bri'></div><!-- reikalingas br kiekis -->
+      <div  id='bri'></div><!-- reikalingas br kiekis -->
       ________________________________________
 <!--       <div id='rul'></div>kiek reikes rulonu -->      
-      <div id='ats'></div>
+      <div  id='ats'></div>
 
   </center>
 
