--- a/homag.html
+++ b/homag.html
@@ -96,22 +96,15 @@
     <table id="dataTable" style="display: none;">
         <thead>
             <tr>
-                <th>ID</th>
-                <th>Group</th>
-                <th>Part</th>
-                <th>Length (I)</th>
-                <th>Width (P)</th>
-                <th>L Alt</th>
-                <th>W Alt</th>
-                <th>Edges</th>
-                <th>Col I</th>
-                <th>Qty</th>
-                <th>Grain/Dir</th>
-                <th>Mat/Face</th>
-                <th>Flags</th>
-                <th>Flag +</th>
-                <th>Flag -</th>
-                <th>Other...</th>
+                <th>Gaminys</th>
+                <th>Dėtalė</th>
+                <th>L</th>
+                <th>W</th>
+                <th>L+</th>
+                <th>W+</th>
+                <th>Br</th>
+                <th>R/Ž</th>
+                <th>Dest</th>
             </tr>
         </thead>
         <tbody id="dataTableBody">
