--- a/homag.html
+++ b/homag.html
@@ -6,14 +6,28 @@
     <title>Brandt Data Search from Google Sheets</title>
     <script src="https://apis.google.com/js/api.js"></script>
     <style>
+        /* Color Palette */
+        :root {
+            --color-bg: #EBE8DB;          /* Light beige */
+            --color-primary: #D76C82;     /* Dusty rose */
+            --color-secondary: #B03052;   /* Deep red */
+            --color-accent: #3D0301;      /* Dark brown */
+            --color-text: #333;           /* Dark gray (original) */
+            --color-table-header: #e9e9e9; /* Light gray (original) */
+            --color-table-row-even: #f9f9f9; /* Very light gray (original) */
+            --color-table-row-hover: #f1f1f1; /* Light gray (original) */
+            --color-input-border: #ccc;     /* Light gray (original) */
+            --color-loading-text: #666;    /* Medium gray (original) */
+        }
+
         body {
             font-family: sans-serif;
             margin: 20px;
-            background-color: #f4f4f4;
+            background-color: var(--color-bg);
         }
         h1 {
             text-align: center;
-            color: #333;
+            color: var(--color-accent); /* Changed to dark brown */
         }
         #search-controls {
             margin-bottom: 20px;
@@ -29,11 +43,12 @@
         #search-controls label {
             font-weight: bold;
             margin-right: 5px;
+            color: var(--color-secondary); /* Changed to dusty rose */
         }
         #search-controls input[type="text"],
         #search-controls input[type="number"] {
             padding: 8px;
-            border: 1px solid #ccc;
+            border: 1px solid var(--color-input-border);
             border-radius: 3px;
             margin-right: 10px;
         }
@@ -52,26 +67,27 @@
             word-break: break-word;
         }
         th {
-            background-color: #e9e9e9;
+            background-color: var(--color-table-header);
             position: sticky;
             top: 0;
             z-index: 1;
+            color: var(--color-accent); /* Changed to dark brown */
         }
         tbody tr:nth-child(even) {
-            background-color: #f9f9f9;
+            background-color: var(--color-table-row-even);
         }
         tbody tr:hover {
-            background-color: #f1f1f1;
+            background-color: var(--color-table-row-hover);
         }
         #loading {
             text-align: center;
             margin-top: 20px;
             font-style: italic;
-            color: #666;
+            color: var(--color-loading-text);
         }
         #error {
             text-align: center;
-            color: red;
+            color: var(--color-secondary); /* Changed to dusty rose */
             margin-top: 20px;
         }
     </style>
@@ -108,8 +124,7 @@
             </tr>
         </thead>
         <tbody id="dataTableBody">
-            <!-- Data will be populated here by JavaScript -->
-        </tbody>
+            </tbody>
     </table>
 
     <script>
