--- a/homag.html
+++ b/homag.html
@@ -3,21 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brandt Data Search from Google Sheets</title>
+    <title>Brandt Data Search</title>
     <script src="https://apis.google.com/js/api.js"></script>
     <style>
-        /* Color Palette */
         :root {
-            --color-bg: #EBE8DB;          /* Light beige */
-            --color-primary: #D76C82;     /* Dusty rose */
-            --color-secondary: #B03052;   /* Deep red */
-            --color-accent: #3D0301;      /* Dark brown */
-            --color-text: #333;           /* Dark gray (original) */
-            --color-table-header: #e9e9e9; /* Light gray (original) */
-            --color-table-row-even: #f9f9f9; /* Very light gray (original) */
-            --color-table-row-hover: #f1f1f1; /* Light gray (original) */
-            --color-input-border: #ccc;     /* Light gray (original) */
-            --color-loading-text: #666;    /* Medium gray (original) */
+            --color-bg: #EBE8DB;
+            --color-primary: #D76C82;
+            --color-secondary: #B03052;
+            --color-accent: #3D0301;
+            --color-text: #333;
+            --color-table-header: #e9e9e9;
+            --color-table-row-even: #f9f9f9;
+            --color-table-row-hover: #f1f1f1;
+            --color-input-border: #ccc;
+            --color-loading-text: #666;
         }
 
         body {
@@ -27,57 +26,51 @@
         }
         h1 {
             text-align: center;
-            color: var(--color-accent); /* Changed to dark brown */
+            color: var(--color-accent);
         }
         #search-controls {
-            margin-bottom: 20px;
-            padding: 15px;
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
             display: flex;
             flex-wrap: wrap;
             gap: 15px;
+            background: #fff;
+            padding: 15px;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
             align-items: center;
         }
         #search-controls label {
             font-weight: bold;
-            margin-right: 5px;
-            color: var(--color-secondary); /* Changed to dusty rose */
+            color: var(--color-secondary);
         }
-        #search-controls input[type="text"],
-        #search-controls input[type="number"] {
+        #search-controls input {
             padding: 8px;
             border: 1px solid var(--color-input-border);
             border-radius: 3px;
-            margin-right: 10px;
         }
         table {
             width: 100%;
             border-collapse: collapse;
             margin-top: 20px;
-            background-color: #fff;
+            background: #fff;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
         th, td {
             border: 1px solid #ddd;
             padding: 10px;
             text-align: left;
-            font-size: 0.9em;
-            word-break: break-word;
         }
         th {
-            background-color: var(--color-table-header);
+            background: var(--color-table-header);
             position: sticky;
             top: 0;
             z-index: 1;
-            color: var(--color-accent); /* Changed to dark brown */
+            color: var(--color-accent);
         }
         tbody tr:nth-child(even) {
-            background-color: var(--color-table-row-even);
+            background: var(--color-table-row-even);
         }
         tbody tr:hover {
-            background-color: var(--color-table-row-hover);
+            background: var(--color-table-row-hover);
         }
         #loading {
             text-align: center;
@@ -87,28 +80,21 @@
         }
         #error {
             text-align: center;
-            color: var(--color-secondary); /* Changed to dusty rose */
+            color: var(--color-secondary);
             margin-top: 20px;
         }
     </style>
 </head>
 <body>
     <h1>Brandt Data Search</h1>
-
     <div id="search-controls">
-        <div>
-            <label for="generalSearch">General Search:</label>
-            <input type="text" id="generalSearch" placeholder="Search text...">
-        </div>
-        <div>
-            <label for="dimensionSearch">Dimension (±3mm):</label>
-            <input type="number" id="dimensionSearch" placeholder="Search Length or Width">
-        </div>
+        <label for="generalSearch">General Search:</label>
+        <input type="text" id="generalSearch" placeholder="Search text...">
+        <label for="dimensionSearch">Dimension (±3mm):</label>
+        <input type="number" id="dimensionSearch" placeholder="Search Length or Width">
     </div>
-
     <div id="loading">Loading data...</div>
     <div id="error" style="display: none;"></div>
-
     <table id="dataTable" style="display: none;">
         <thead>
             <tr>
@@ -123,53 +109,39 @@
                 <th>Dest</th>
             </tr>
         </thead>
-        <tbody id="dataTableBody">
-            </tbody>
+        <tbody id="dataTableBody"></tbody>
     </table>
-
     <script>
-        // Google Sheets API Configuration
         const SPREADSHEET_ID = '1hAbZXWSvNY6AKL6xGZSjL9wjmmxOLHz7vT83utWmC8g';
-        const RANGE = 'Main NEW'; // Sheet name
+        const RANGE = 'Main NEW';
         const API_KEY = 'AIzaSyAvwaPTyLSgiwMhxHSpsS7iUfiLERkawaM';
 
-        // DOM Elements
         const generalSearchInput = document.getElementById('generalSearch');
         const dimensionSearchInput = document.getElementById('dimensionSearch');
         const tableBody = document.getElementById('dataTableBody');
         const dataTable = document.getElementById('dataTable');
         const loadingIndicator = document.getElementById('loading');
         const errorDiv = document.getElementById('error');
-
         let parsedData = [];
-        let currentGroup = ''; // To keep track of the group name
 
         function initClient() {
-            gapi.client.init({
-                apiKey: API_KEY,
-                discoveryDocs: ['https://sheets.googleapis.com/$discovery/rest?version=v4'],
-            }).then(() => {
-                fetchSheetData();
-            }).catch(error => {
-                showError('Error initializing Google Sheets client: ' + error);
-            });
+            gapi.client.init({ apiKey: API_KEY, discoveryDocs: ['https://sheets.googleapis.com/$discovery/rest?version=v4'] })
+                .then(fetchSheetData)
+                .catch(error => showError('Error initializing: ' + error));
         }
 
         function fetchSheetData() {
-            gapi.client.sheets.spreadsheets.values.get({
-                spreadsheetId: SPREADSHEET_ID,
-                range: RANGE,
-            }).then((response) => {
-                const values = response.result.values;
-                parsedData = parseSheetData(values);
-                populateTable(parsedData);
-                
-                // Hide loading, show table
-                loadingIndicator.style.display = 'none';
-                dataTable.style.display = 'table';
-            }).catch(error => {
-                showError('Error fetching data: ' + error);
-            });
+            gapi.client.sheets.spreadsheets.values.get({ spreadsheetId: SPREADSHEET_ID, range: RANGE })
+                .then(response => {
+                    parsedData = response.result.values.slice(1).map(row => ({
+                        id: row[0] || '', group: row[1] || '', part: row[2] || '',
+                        length: parseFloat(row[3]) || NaN, width: parseFloat(row[4]) || NaN
+                    }));
+                    populateTable(parsedData);
+                    loadingIndicator.style.display = 'none';
+                    dataTable.style.display = 'table';
+                })
+                .catch(error => showError('Error fetching data: ' + error));
         }
 
         function showError(message) {
@@ -178,129 +150,32 @@
             errorDiv.style.display = 'block';
         }
 
-        function parseSheetData(values) {
-            const data = [];
-            let currentGroup = '';
-
-            // Skip header row
-            for (let i = 1; i < values.length; i++) {
-                const row = values[i];
-                
-                // Check if this row has a group name
-                if (row[1]) {
-                    currentGroup = row[1];
-                }
-
-                // Ensure the row has enough columns
-                while (row.length < 16) {
-                    row.push('');
-                }
-
-                const rowObject = {
-                    id: row[0] || '',
-                    group: currentGroup || '',
-                    part: row[2] || '',
-                    length: row[3] || '',
-                    width: row[4] || '',
-                    lengthAlt: row[5] || '',
-                    widthAlt: row[6] || '',
-                    edges: row[7] || '',
-                    colI: row[8] || '',
-                    qty: row[9] || '',
-                    grainDir: row[10] || '',
-                    matFace: row[11] || '',
-                    flags: row[12] || '',
-                    flagPlus: row[13] || '',
-                    flagMinus: row[14] || '',
-                    other: row.slice(15).join(', ') || ''
-                };
-                data.push(rowObject);
-            }
-            return data;
-        }
-
         function populateTable(data) {
             tableBody.innerHTML = '';
             if (data.length === 0) {
-                const tr = document.createElement('tr');
-                const td = document.createElement('td');
-                td.colSpan = 16;
-                td.textContent = 'No matching records found.';
-                td.style.textAlign = 'center';
-                tr.appendChild(td);
-                tableBody.appendChild(tr);
+                tableBody.innerHTML = '<tr><td colspan="9" style="text-align:center;">No matching records found.</td></tr>';
                 return;
             }
             data.forEach(row => {
-                const tr = document.createElement('tr');
-                tr.innerHTML = `
-                    <td>${row.id}</td>
-                    <td>${row.group}</td>
-                    <td>${row.part}</td>
-                    <td>${row.length}</td>
-                    <td>${row.width}</td>
-                    <td>${row.lengthAlt}</td>
-                    <td>${row.widthAlt}</td>
-                    <td>${row.edges}</td>
-                    <td>${row.colI}</td>
-                    <td>${row.qty}</td>
-                    <td>${row.grainDir}</td>
-                    <td>${row.matFace}</td>
-                    <td>${row.flags}</td>
-                    <td>${row.flagPlus}</td>
-                    <td>${row.flagMinus}</td>
-                    <td>${row.other}</td>
-                `;
-                tableBody.appendChild(tr);
+                tableBody.innerHTML += `<tr><td>${row.id}</td><td>${row.group}</td><td>${row.part}</td>
+                    <td>${row.length || ''}</td><td>${row.width || ''}</td></tr>`;
             });
         }
 
         function filterData() {
-            const generalTerm = generalSearchInput.value.toLowerCase();
-            const dimensionValue = parseFloat(dimensionSearchInput.value);
+            const term = generalSearchInput.value.toLowerCase();
+            const dimension = parseFloat(dimensionSearchInput.value);
             const range = 3;
-
             const filtered = parsedData.filter(row => {
-                // General Text Search
-                let matchesGeneral = true;
-                if (generalTerm) {
-                    matchesGeneral = (
-                        row.id.toLowerCase().includes(generalTerm) ||
-                        row.group.toLowerCase().includes(generalTerm) ||
-                        row.part.toLowerCase().includes(generalTerm) ||
-                        row.edges.toLowerCase().includes(generalTerm) ||
-                        row.flags.toLowerCase().includes(generalTerm) ||
-                        row.other.toLowerCase().includes(generalTerm)
-                    );
-                }
-
-                // Dimension Range Search
-                let matchesDimension = true;
-                if (!isNaN(dimensionValue)) {
-                    const rowLength = parseFloat(row.length);
-                    const rowWidth = parseFloat(row.width);
-
-                    const lengthInRange = !isNaN(rowLength) &&
-                                          (rowLength >= dimensionValue - range && rowLength <= dimensionValue + range);
-
-                    const widthInRange = !isNaN(rowWidth) &&
-                                         (rowWidth >= dimensionValue - range && rowWidth <= dimensionValue + range);
-
-                    matchesDimension = lengthInRange || widthInRange;
-                } else if (dimensionSearchInput.value.trim() !== '') {
-                    matchesDimension = false;
-                }
-
+                let matchesGeneral = !term || Object.values(row).some(val => val.toString().toLowerCase().includes(term));
+                let matchesDimension = isNaN(dimension) || ((row.length >= dimension - range && row.length <= dimension + range) ||
+                    (row.width >= dimension - range && row.width <= dimension + range));
                 return matchesGeneral && matchesDimension;
             });
-
             populateTable(filtered);
         }
 
-        // Initialize Google Sheets API
         gapi.load('client', initClient);
-
-        // Event Listeners
         generalSearchInput.addEventListener('input', filterData);
         dimensionSearchInput.addEventListener('input', filterData);
     </script>
