--- a/homag.html
+++ b/homag.html
@@ -3,66 +3,181 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Database Manager</title>
+    <title>Brandt Data Search</title>
+    <script src="https://apis.google.com/js/api.js"></script>
     <style>
-        body { font-family: Arial, sans-serif; }
-        #data-container { margin-top: 20px; }
+        :root {
+            --color-bg: #EBE8DB;
+            --color-primary: #D76C82;
+            --color-secondary: #B03052;
+            --color-accent: #3D0301;
+            --color-text: #333;
+            --color-table-header: #e9e9e9;
+            --color-table-row-even: #f9f9f9;
+            --color-table-row-hover: #f1f1f1;
+            --color-input-border: #ccc;
+            --color-loading-text: #666;
+        }
+
+        body {
+            font-family: sans-serif;
+            margin: 20px;
+            background-color: var(--color-bg);
+        }
+        h1 {
+            text-align: center;
+            color: var(--color-accent);
+        }
+        #search-controls {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 15px;
+            background: #fff;
+            padding: 15px;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            align-items: center;
+        }
+        #search-controls label {
+            font-weight: bold;
+            color: var(--color-secondary);
+        }
+        #search-controls input {
+            padding: 8px;
+            border: 1px solid var(--color-input-border);
+            border-radius: 3px;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+            background: #fff;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        th, td {
+            border: 1px solid #ddd;
+            padding: 10px;
+            text-align: left;
+        }
+        th {
+            background: var(--color-table-header);
+            position: sticky;
+            top: 0;
+            z-index: 1;
+            color: var(--color-accent);
+        }
+        tbody tr:nth-child(even) {
+            background: var(--color-table-row-even);
+        }
+        tbody tr:hover {
+            background: var(--color-table-row-hover);
+        }
+        #loading {
+            text-align: center;
+            margin-top: 20px;
+            font-style: italic;
+            color: var(--color-loading-text);
+        }
+        #error {
+            text-align: center;
+            color: var(--color-secondary);
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
-    <button id="update-btn">Update Database</button>
-    <div id="data-container"></div>
-    
+    <h1>Brandt Data Search</h1>
+    <div id="search-controls">
+        <label for="generalSearch">General Search:</label>
+        <input type="text" id="generalSearch" placeholder="Search text...">
+        <label for="dimensionSearch">Dimension (±3mm):</label>
+        <input type="number" id="dimensionSearch" placeholder="Search Length or Width">
+    </div>
+    <div id="loading">Loading data...</div>
+    <div id="error" style="display: none;"></div>
+    <table id="dataTable" style="display: none;">
+        <thead>
+            <tr>
+                <th>Gaminys</th>
+                <th>Dėtalė</th>
+                <th>L</th>
+                <th>W</th>
+                <th>L+</th>
+                <th>W+</th>
+                <th>Br</th>
+                <th>R/Ž</th>
+                <th>Dest</th>
+            </tr>
+        </thead>
+        <tbody id="dataTableBody"></tbody>
+    </table>
     <script>
-        let database = [];
-        const dataFile = "database.json";
+        const SPREADSHEET_ID = '1hAbZXWSvNY6AKL6xGZSjL9wjmmxOLHz7vT83utWmC8g';
+        const RANGE = 'Main NEW';
+        const API_KEY = 'AIzaSyAvwaPTyLSgiwMhxHSpsS7iUfiLERkawaM';
 
-        async function loadDatabase() {
-            try {
-                const response = await fetch(dataFile);
-                database = await response.json();
-                renderData();
-            } catch (error) {
-                console.error("Error loading database:", error);
+        const generalSearchInput = document.getElementById('generalSearch');
+        const dimensionSearchInput = document.getElementById('dimensionSearch');
+        const tableBody = document.getElementById('dataTableBody');
+        const dataTable = document.getElementById('dataTable');
+        const loadingIndicator = document.getElementById('loading');
+        const errorDiv = document.getElementById('error');
+        let parsedData = [];
+
+        function initClient() {
+            gapi.client.init({ apiKey: API_KEY, discoveryDocs: ['https://sheets.googleapis.com/$discovery/rest?version=v4'] })
+                .then(fetchSheetData)
+                .catch(error => showError('Error initializing: ' + error));
+        }
+
+        function fetchSheetData() {
+            gapi.client.sheets.spreadsheets.values.get({ spreadsheetId: SPREADSHEET_ID, range: RANGE })
+                .then(response => {
+                    parsedData = response.result.values.slice(1).map(row => ({
+                        id: row[0] || '', group: row[1] || '', part: row[2] || '',
+                        length: parseFloat(row[3]) || NaN, width: parseFloat(row[4]) || NaN
+                    }));
+                    populateTable(parsedData);
+                    loadingIndicator.style.display = 'none';
+                    dataTable.style.display = 'table';
+                })
+                .catch(error => showError('Error fetching data: ' + error));
+        }
+
+        function showError(message) {
+            loadingIndicator.style.display = 'none';
+            errorDiv.textContent = message;
+            errorDiv.style.display = 'block';
+        }
+
+        function populateTable(data) {
+            tableBody.innerHTML = '';
+            if (data.length === 0) {
+                tableBody.innerHTML = '<tr><td colspan="9" style="text-align:center;">No matching records found.</td></tr>';
+                return;
             }
-        }
-
-        async function updateDatabase() {
-            try {
-                const response = await fetch("https://sheets.googleapis.com/v4/spreadsheets/YOUR_SHEET_ID/values/Sheet1?key=AIzaSyAvwaPTyLSgiwMhxHSpsS7iUfiLERkawaM");
-                const data = await response.json();
-                database = data.values;
-                renderData();
-                saveDatabase();
-            } catch (error) {
-                console.error("Error updating database:", error);
-            }
-        }
-
-        function saveDatabase() {
-            fetch("save_database.php", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify(database)
-            })
-            .then(response => response.text())
-            .then(data => console.log("Database saved:", data))
-            .catch(error => console.error("Error saving database:", error));
-        }
-
-        function renderData() {
-            const container = document.getElementById("data-container");
-            container.innerHTML = "";
-            database.forEach(row => {
-                const div = document.createElement("div");
-                div.textContent = row.join(", ");
-                container.appendChild(div);
+            data.forEach(row => {
+                tableBody.innerHTML += `<tr><td>${row.id}</td><td>${row.group}</td><td>${row.part}</td>
+                    <td>${row.length || ''}</td><td>${row.width || ''}</td></tr>`;
             });
         }
 
-        document.getElementById("update-btn").addEventListener("click", updateDatabase);
+        function filterData() {
+            const term = generalSearchInput.value.toLowerCase();
+            const dimension = parseFloat(dimensionSearchInput.value);
+            const range = 3;
+            const filtered = parsedData.filter(row => {
+                let matchesGeneral = !term || Object.values(row).some(val => val.toString().toLowerCase().includes(term));
+                let matchesDimension = isNaN(dimension) || ((row.length >= dimension - range && row.length <= dimension + range) ||
+                    (row.width >= dimension - range && row.width <= dimension + range));
+                return matchesGeneral && matchesDimension;
+            });
+            populateTable(filtered);
+        }
 
-        loadDatabase();
+        gapi.load('client', initClient);
+        generalSearchInput.addEventListener('input', filterData);
+        dimensionSearchInput.addEventListener('input', filterData);
     </script>
 </body>
 </html>
