--- a/homag.html
+++ b/homag.html
@@ -309,7 +309,7 @@
         const CONFIG = {
             SPREADSHEET_ID: '1hAbZXWSvNY6AKL6xGZSjL9wjmmxOLHz7vT83utWmC8g',
             RANGE: 'Main NEW',
-            API_KEY: 'YOUR_API_KEY' // Replace with your actual API key
+            API_KEY: 'AIzaSyAvwaPTyLSgiwMhxHSpsS7iUfiLERkawaM' // Replace with your actual API key
         };
 
         // DOM element references
