--- a/homag.html
+++ b/homag.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;600;700&display=swap" rel="stylesheet">
     <script src="https://apis.google.com/js/api.js" defer></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+
     <style>
         :root {
             --color-bg: #EBE8DB;
