--- a/homag.html
+++ b/homag.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Brandt Data Search</title>
-<script src="https://apis.google.com/js/api.js" defer></script>
+<script src="https://apis.google.com/js/api.js?onload=gapiLoaded" async defer></script>
+
 <style>
 :root {
     --color-bg: #EBE8DB;
