--- a/homag.html
+++ b/homag.html
@@ -95,6 +95,10 @@ tbody tr:hover{background:var(--color-table-row-hover);}
 </table>
 
 <script>
+function gapiLoaded() {
+    init();
+}
+
 const CONFIG = {
     SPREADSHEET_ID: '1hAbZXWSvNY6AKL6xGZSjL9wjmmxOLHz7vT83utWmC8g',
     RANGE: 'Main NEW',
